conflict assert definitions

XMLWordPrintable

    • jfr

      The following failure occurs while building on MacOS M1:

      In file included from /Users/xueleifan/workspace/jdk-dev/test/hotspot/gtest/jfr/test_networkUtilization.cpp:222:
      /Users/xueleifan/workspace/jdk-dev/src/hotspot/share/jfr/periodic/jfrNetworkUtilization.cpp:59:25: error: too many arguments provided to function-like macro invocation
        assert(iface != NULL, "invariant");
                              ^
      /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX13.1.sdk/usr/include/assert.h:98:9: note: macro 'assert' defined here
      #define assert(e) \
              ^

      Alternatively, vmassert() could be used instead.

            Assignee:
            Xuelei Fan
            Reporter:
            Xuelei Fan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: