8299380: conflict assert definitions